[package]
name = "vector-traits"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust traits for 2D and 3D vector types."

[dependencies]
glam = { version = "0.24.1", optional = true }
cgmath = { version = "0.18.0", optional = true }
approx = {version = "0.5.1", optional = true }
num-traits = "0.2.16"

[features]
glam = ["dep:glam"]
cgmath = ["dep:cgmath"]
approx = ["dep:approx"]

[profile.release]
lto = true
