[package]
name = "vector-traits"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust traits for 2D and 3D vector types."
authors = ["eadf"]
repository = "https://github.com/eadf/vector-traits"

[dependencies]
glam = { version = "0.24.2", optional = true }
cgmath = { version = "0.18.0", optional = true }
approx = {version = "0.5.1" }
num-traits = "0.2.17"

[features]
glam = ["dep:glam"]
cgmath = ["dep:cgmath"]

[profile.release]
lto = true
